[gd_scene load_steps=19 format=3 uid="uid://dn4008nv06clk"]

[ext_resource type="Script" path="res://scenes/scripts/main_menu.gd" id="1_60uys"]
[ext_resource type="Shader" uid="uid://0dm11c6qayeu" path="res://shaders/hit.tres" id="2_3r7k7"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="2_36rfs"]
[ext_resource type="Shader" path="res://shaders/border.gdshader" id="2_go6j5"]
[ext_resource type="PackedScene" uid="uid://c86ohxnlg8a" path="res://player/dash_stamina.tscn" id="2_tp1el"]
[ext_resource type="Texture2D" uid="uid://bicv2shwkdaf8" path="res://sprites/bg_mainmenu2.png" id="3_lq80u"]
[ext_resource type="PackedScene" uid="uid://cefk00qrd2w1n" path="res://player/ghost_player.tscn" id="4_sd2tg"]
[ext_resource type="Texture2D" uid="uid://s3jyk22y2cm4" path="res://sprites/b_particle.png" id="5_p17an"]
[ext_resource type="AudioStream" uid="uid://i6mb63m4vyaa" path="res://SFX/possessed_hit2.ogg" id="6_7j32i"]
[ext_resource type="AudioStream" uid="uid://r2uyjovl24fv" path="res://SFX/button_4.ogg" id="10_p1eh7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qg754"]
shader = ExtResource("2_go6j5")
shader_parameter/rect_size = Vector2(1.935, 0.145)
shader_parameter/bness = 5.45
shader_parameter/fall_off_scale = 6.385
shader_parameter/b_offset = 0.08
shader_parameter/speed = 3.188
shader_parameter/noise_intensity = 0.553

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2afgu"]
shader = ExtResource("2_3r7k7")
shader_parameter/isHit = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_5fv83"]

[sub_resource type="Animation" id="Animation_lueaj"]
length = 0.0115
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4443o"]
resource_name = "hit_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.217638),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdvf1"]
_data = {
"RESET": SubResource("Animation_lueaj"),
"hit_flash": SubResource("Animation_4443o")
}

[sub_resource type="Curve" id="Curve_6khei"]
_data = [Vector2(0, 0.736264), 0.0, 0.0, 0, 0, Vector2(0.0539419, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.195021, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.975104, 0.406593), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3vm2v"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("10_p1eh7")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60uys")

[node name="Stamina" parent="." instance=ExtResource("2_tp1el")]
z_index = 6
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 137.0
offset_top = 24.0
offset_right = 137.0
offset_bottom = 24.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.876472, 0.86856, 0.940414, 1)

[node name="Border" type="CanvasGroup" parent="."]
modulate = Color(1, 1, 1, 0.235294)
self_modulate = Color(0.347664, 0.245274, 0.85484, 1)
position = Vector2(-4, -10)

[node name="ColorRect" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = -7.0
offset_top = -159.0
offset_right = 33.0
offset_bottom = -119.0
scale = Vector2(30.04, 8)

[node name="ColorRect2" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = 96.0
offset_top = -182.0
offset_right = 136.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect4" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = 1380.0
offset_top = -182.0
offset_right = 1420.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect3" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = -7.0
offset_top = 779.0
offset_right = 33.0
offset_bottom = 819.0
scale = Vector2(30.04, 8)

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 183.0
offset_top = -155.0
offset_right = 407.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(113, 53)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_2afgu")
layout_mode = 2
theme = ExtResource("2_36rfs")
text = "Play"

[node name="b_area" type="Area2D" parent="MarginContainer/VBoxContainer/Play"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/VBoxContainer/Play/b_area"]
position = Vector2(112, 52)
scale = Vector2(10.445, 4.265)
shape = SubResource("CircleShape2D_5fv83")

[node name="HitFlash" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Play"]
libraries = {
"": SubResource("AnimationLibrary_tdvf1")
}

[node name="p_splash" type="CPUParticles2D" parent="MarginContainer/VBoxContainer/Play"]
position = Vector2(96, 56)
emitting = false
lifetime = 1.2
one_shot = true
speed_scale = 2.47
explosiveness = 0.86
randomness = 0.16
texture = ExtResource("5_p17an")
spread = 176.55
gravity = Vector2(0, 0)
initial_velocity_min = 71.52
initial_velocity_max = 102.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_6khei")

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_36rfs")
text = "Options"

[node name="o_area" type="Area2D" parent="MarginContainer/VBoxContainer/Options"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/VBoxContainer/Options/o_area"]
position = Vector2(112, 52)
scale = Vector2(10.445, 4.265)
shape = SubResource("CircleShape2D_5fv83")

[node name="HitFlash2" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Options"]
root_node = NodePath("../../Play")
libraries = {
"": SubResource("AnimationLibrary_tdvf1")
}

[node name="o_splash" type="CPUParticles2D" parent="MarginContainer/VBoxContainer/Options"]
position = Vector2(91, 49)
emitting = false
lifetime = 1.2
one_shot = true
speed_scale = 2.47
explosiveness = 0.86
randomness = 0.16
texture = ExtResource("5_p17an")
spread = 176.55
gravity = Vector2(0, 0)
initial_velocity_min = 71.52
initial_velocity_max = 102.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_6khei")

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_36rfs")
text = "Exit"

[node name="BgMainmenu2" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(576, 458)
texture = ExtResource("3_lq80u")

[node name="GhostPlayer" parent="." instance=ExtResource("4_sd2tg")]
unique_name_in_owner = true
z_index = 2
position = Vector2(576, 210)

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7j32i")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(0, -27)
collision_layer = 15
collision_mask = 15

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2(997.86, 548)
scale = Vector2(1.03, 1.03)
build_mode = 1
polygon = PackedVector2Array(220, 367, -1064.91, 366.019, -1063.94, -435.922, -956.175, -434.951, -956.175, 318.447, 132.175, 318.447, 131.204, -433.981, -1050.35, -434.951, -1039.67, -561.165, 214.699, -561.165)

[node name="button_hover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_3vm2v")
pitch_scale = 0.88

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="body_entered" from="MarginContainer/VBoxContainer/Play/b_area" to="." method="_on_b_area_body_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="body_entered" from="MarginContainer/VBoxContainer/Options/o_area" to="." method="_on_o_area_body_entered"]
[connection signal="body_entered" from="MarginContainer/VBoxContainer/Options/o_area" to="." method="_on_b_options_body_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
